<package>
  <name>rocon_gateway_tutorials</name>
  <version>0.2.0</version>
  <description>
    Collection of gateway demos illustrating usage of the gateway model.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <maintainer email="jihoonl@rnd.yujinrobot.com">Jihoon Lee</maintainer>
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/rocon_gateway</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_multimaster</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_multimaster/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author> -->
  <author email="jihoonl@rnd.yujinrobot.com">Jihoon Lee</author>
  <author email="piyushk@gmail.com">Piyush Khandelwal</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rocon_hub</run_depend>
  <run_depend>rocon_gateway</run_depend>
  <run_depend>rocon_gateway_graph</run_depend>
  <run_depend>zeroconf_avahi</run_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
