<?xml version="1.0"?>
<package>
  <name>rocon_tutorials</name>
  <version>0.5.6</version>
  <description>
     Various tutorials to demonstrate in simulation, the rocon framework.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>
  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/rocon_tutorials</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_tutorials</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_tutorials/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author>
  <author email="jihoonlee.in@gmail.com">Jihoon Lee</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rocon_gateway_tutorials</run_depend>
  <run_depend>turtle_concert</run_depend>
  <run_depend>turtle_stroll</run_depend>
  <run_depend>chatter_concert</run_depend>

  <export>
    <metapackage/>
  </export>
</package>

