<package>
  <name>turtle_concert</name>
  <version>0.2.0</version>
  <description>
    A very simple software concert.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <maintainer email="jihoonl@rnd.yujinrobot.com">Jihoon Lee</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/turtle_concert</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_tutorials</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_tutorials/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author>
  <author email="jihoonl@rnd.yujinrobot.com">Jihoon Lee</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>redis</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rocon_utilities</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>zeroconf_msgs</run_depend>
  <run_depend>gateway_msgs</run_depend>
  <!-- 
    Don't hardcode a dependency to a particular platform's zeroconf implementation 
    even if it does appeal to us ubuntu eggheads.
    <run_depend>zeroconf_avahi</run_depend> 
  -->
</package>
