<package>
  <name>chatter_concert</name>
  <version>0.5.6</version>
  <description>
    A very simple software concert with talker/listener apps.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/chatter_concert</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_tutorials</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_tutorials/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>concert_conductor</run_depend>
  <run_depend>concert_orchestra</run_depend>
  <run_depend>rocon_app_manager</run_depend>
  <run_depend>rocon_apps</run_depend>
  <run_depend>rospy_tutorials</run_depend>

  <!-- 
    Hardcode this dependency for now since we only test it on linux 
    Ideally, I wouldn't hardcode the zeroconf implementation though.
    even if it does appeal to us ubuntu eggheads.
  -->
    <run_depend>zeroconf_avahi</run_depend> 
</package>
