<?xml version="1.0"?>
<package>
  <name>multinav_concert</name>
  <version>0.1.0</version>
  <description>Launchers and configuration for the multinav concert.</description>

  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>
  <license>BSD</license>
  <author email="d.stonier@gmail.com">Daniel Stonier</author>
  <author email="jihoonlee.in@gmail.com">Jihoon Lee</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>concert_conductor</run_depend>
  <run_depend>concert_orchestra</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>rocon_app_manager</run_depend>
  <run_depend>rocon_tf_reconstructor</run_depend>
  <run_depend>robot_pose_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>kobuki_softapps</run_depend>
  <run_depend>yujin_maps</run_depend>
</package>
