<package>
  <name>turtle_concert</name>
  <version>0.5.6</version>
  <description>
    A very simple software concert.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/turtle_concert</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_tutorials</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_tutorials/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author>
  <author email="jihoonlee.in@gmail.com">Jihoon Lee</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>concert_conductor</run_depend>
  <run_depend>concert_orchestra</run_depend>
  <run_depend>gateway_msgs</run_depend>
  <run_depend>rocon_app_manager</run_depend>
  <run_depend>rocon_apps</run_depend>
  <run_depend>rocon_utilities</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>turtle_stroll</run_depend>
  <run_depend>zeroconf_msgs</run_depend>

  <!-- 
    Hardcode this dependency for now since we only test it on linux 
    Ideally, I wouldn't hardcode the zeroconf implementation though.
    even if it does appeal to us ubuntu eggheads.
  -->
    <run_depend>zeroconf_avahi</run_depend> 
</package>
