<package>
  <name>turtle_concert</name>
  <version>0.5.6</version>
  <description>
    A very simple software concert.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/turtle_concert</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_tutorials</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_tutorials/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author>
  <author email="jihoonlee.in@gmail.com">Jihoon Lee</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>turtlesim</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>gateway_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>turtlesim</run_depend>
  <run_depend>concert_master</run_depend>
  <run_depend>gateway_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rocon_app_manager</run_depend>
  <run_depend>rocon_apps</run_depend>
  <run_depend>rocon_utilities</run_depend>
  <run_depend>zeroconf_msgs</run_depend>
  <run_depend>rocon_service_turtlesim</run_depend>
  <run_depend>rocon_service_admin</run_depend>
  <run_depend>rocon_python_comms</run_depend>
  <run_depend>zeroconf_avahi</run_depend> 

  <export>
    <rocon_app>rapps/teleop/teleop.rapp</rocon_app>
    <rocon_app>rapps/turtle_stroll/turtle_stroll.rapp</rocon_app>
    <rocon_service>services/turtle_pond/turtle_pond.service</rocon_service>
  </export>
</package>
