<?xml version="1.0"?>
<package>
  <name>soft_navbot</name>
  <version>0.0.0</version>
  <description>The soft_navbot package</description>

  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://ros.org/wiki/soft_navbot</url> -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rocon_app_manager</run_depend>
  <run_depend>kobuki_softnode</run_depend>
  <run_depend>robot_pose_publisher</run_depend>

</package>
