<?xml version="1.0"?>
<package>
  <name>multinav_concert</name>
  <version>0.1.0</version>
  <description>Launchers and configuration for the multinav concert.</description>

  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>
  <license>BSD</license>
  <author email="d.stonier@gmail.com">Daniel Stonier</author>
  <author email="jihoonlee.in@gmail.com">Jihoon Lee</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>concert_conductorr</build_depend>
  <build_depend>concert_orchestra</build_depend>
  <run_depend>concert_conductorr</run_depend>
  <run_depend>concert_orchestra</run_depend>
</package>
